# sotto

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  renovate.json
.github/workflows/: ci.yml
docs/: architecture.md
src/: config.rs  main.rs  ui.rs
src/daemon/: cache.rs  generator.rs  mod.rs  watcher.rs
src/doctor/: health.rs  mod.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/setup/: mod.rs  prompts.rs
src/shell/: complete.rs  mod.rs  sotto.fish  sotto.zsh
