[package]
name = "sotto"
version = "0.1.0"
edition = "2024"

# testing soemthings
[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
git2 = "0.20.4"
notify = "8.2.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
toml = "1.1.2+spec-1.1.0"
ureq = { version = "3.3.0", features = ["json"] }
